# mailbox-report-generator

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: lint.yaml  mypy.yaml  test.yaml
mailanalysis/: __init__.py  __main__.py  processors.py
mailanalysis/processors/: __init__.py  activity_over_time.py  dow_hour_heatmap.py  most_frequent_addresses.py
mailanalysis/static_assets/: html_header.html
tests/unit/: test_activity_over_time.py  test_hour_heatmap.py
