[project]
name = "Mailbox_analysis"
version = "0.1.0"
description = ""
authors = [
    {name = "Jacopo Farina", email = "jacopo1.farina@gmail.com"},
]
dependencies = [
    "plotly==5.13.0",
    "tqdm>=4.64.1",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "mypy>=0.991",
    "black>=22.12.0",
    "types-tqdm>=4.64.7.11",
    "isort>=5.11.4",
    "pytest>=7.2.1",
    "pytest-cov>=4.0.0",
]

[tool.setuptools]
# explicitly specified to ignore folders like htmlcov that
# would be auto-discovered as packages
packages = [
    "mailanalysis",
    # explicit, to include assets too
    "mailanalysis.static_assets"
]
# true by default, just to be explicit
include-package-data = true

[tool.setuptools.package-data]
"mailanalysis.static_assets" = ["*"]

[[tool.mypy.overrides]]
module = [
    "plotly",
    "plotly.graph_objects"
]
ignore_missing_imports = true

[tool.pdm.scripts]
mypy = {cmd = [
    "mypy",
    "--strict",
    "mailanalysis",
]}
test_with_coverage = {cmd = [
    "pytest",
    "--cov=mailanalysis",
    "--cov-report",
    "html",
    "tests/",
]}
